# SorryDB

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  1000_recent_varied_sorries.json  100_recent_varied_sorries.json  10_recent_varied_sorries.json  30_varied_and_recent_sorries_new_format.json  ABOUT.md  CONTRIBUTING.md  DATABASE.md  DEPLOY.md  DatabaseDesign.md  Dockerfile  Dockerfile.leaderboard  ELO.md  LeanRepoScripts.md  MANIFEST.md  README.md  SorryDB.md  all_contributors.txt  analysis_sorry_llm.md  analysis_sorry_llm_cache.json  aristotlelib-0.7.0-py3-none-any.whl  cloudbuild.yaml  compose.yml  config.toml  eval_commands.md  final_length_case_studies.md  find_new_sorries.py  find_sorries.py  get_lean_repos.py  get_mathlib_contributors.py  get_user_repos.sh  justfile  lean4_repos.old.txt  lean4_repos.txt  lean4_repos.txt.old  lean4_repos.txt.tmp  (+27 more)
LeanUtils/: LeanUtils.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
charts/: plot_elo_vs_solved.py  plot_problem_difficulty.py
data/: 1000_recent_varied_sorries.json  100_recent_varied_sorries.json  100_recent_varied_sorries_single_broken_pnt_sorry.json  10_recent_varied_sorries.json  minif2f_lean4_4_9.json  minif2f_test_lean_4_24_sorries.json  p.prof  sorry_database.json
doc/: ABOUT.md  AGENTS.md  CRAWLER.md  DATABASE-SCRIPTS.md  DATABASE.md  DEPLOY.md  Introduction_to_the_SorryDB_Project.ipynb  LEADERBOARD_AGENT_TUTORIAL.md  STRATEGIES.md  checklist_database.json  populate_server_with_agent_and_sorries.sh  sample-sorry-4-24.json  sample_llm_config.json  sample_proof_list.json  sample_repo_list.json  sample_sorry_list.json  sample_sorry_list_single.json
intermediate_experiment_outputs/: analyze_proof_verification.py  chart_multi_tactic.py  compare_experiments.py  comparison.json  comparison.md  comparison_by_category.json  comparison_by_category.md
leaderboard_deployment/: Dockerfile  compose.yml  export_openapi_spec.py
lean/: reproduce.sh
orchestration/: deploy.py  hello_prefect_flow.py  update_database_workflow.py
profiling/: profile_update_database.py
repo_lists/: README.md  active_repos.json  active_repos_without_mathlib.json
scripts/: analyze_extraction_bug.py  analyze_sorry_llm.py  analyze_sorry_validity.py  browse_proofs.sh  categorize_repos.py  category_distribution.py  compare_sorry_details.py  compare_strategies.py  compare_strategies_single_repo.py  count_timeout_errors.py  deploy_goedel_vertex.py  deploy_kimina_vertex.py  extract_agentic_iterations.py  extract_failed_sorries.py  extract_llm_responses_for_replay.py  extract_pass_at_k.py  extract_proof_lengths.py  extract_quota_error_sorries.py  extract_snapshot_mapping.py  extract_sorry_solutions.py  extract_timeout_error_sorries.py  find_exact_only.py  find_high_variance_sorries.py  generate_proof_case_study.py  generate_rating_attempts.py  generate_repo_latex_table.py  plot_agentic_iterations.py  plot_blame_dates.py  plot_combined_llm_calls.py  plot_pass_at_k.py  plot_proof_lengths.py  plot_proof_lengths_heatmap.py  plot_proof_lengths_parallel.py  plot_proof_lengths_scatter.py  plot_sorry_history.py  plot_success_by_blame_date.py  plot_success_distribution.py  plot_tokens_histogram.py  reconstruct_partial_experiment.py  reject_cheating_proofs.py  (+5 more)
sorry_samples/: trivial_sorry.json
src/: find_sorries.py  get_mathlib_contributors.py  git_ops.py  new_sorries.json  offline_sorries.py  old_output.json  output.json  repl_api.py  sorry_finder.py
tests/: conftest.py  mock_lean_repository_proofs.json  mock_sorries.py  test_build_database.py  test_deduplicate_database.py  test_deepseek_post_processing.py  test_gather_sorries.py  test_git_ops.py  test_grep.py  test_init_database.py  test_json_database.py  test_leaderboard_agent.py  test_llm_proof_utils.py  test_morphcloud_runner.py  test_query_database.py  test_repl.py  test_repl_read_file.py  test_rfl_agent.py  test_sagemaker_hugging_face_strategy.py  test_sorry.py  test_sorry_database.py  test_sorry_extraction.py  test_sorry_finder.py  test_strategy_config.py  test_verify.py
user_repos/: 0art0_repos.txt  4hma4d_repos.txt  ADedecker_repos.txt  Aaron1011_repos.txt  AlexBrodbelt_repos.txt  AlexKontorovich_repos.txt  AnthonyBordg_repos.txt  AntoineChambert-Loir_repos.txt  AurelienSaue_repos.txt  BGuillemet_repos.txt  Beanway144_repos.txt  Bergschaf_repos.txt  Blackfeather007_repos.txt  BoltonBailey_repos.txt  CBirkbeck_repos.txt  ChrisHughes24_repos.txt  ClausenCl_repos.txt  Colin166_repos.txt  Command-Master_repos.txt  D-Thomine_repos.txt  EdAyers_repos.txt  EdwardWatine_repos.txt  EmilieUthaiwat_repos.txt  Espio231_repos.txt  FLDutchmann_repos.txt  FMLJohn_repos.txt  FR-vdash-bot_repos.txt  Hagb_repos.txt  (+257 more)
(+2275 files in other folders)
