[project]
name = "sorrydb"
version = "0.1.0"
description = "Build a continously updating database of sorry statments in public Lean4 repositories"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "Apache License" }
readme = "README.md"
requires-python = ">=3.13"


[tool.poetry.dependencies]
gitpython = "*"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.2.0"
ruff = "^0.11.1"

[tool.poetry]
packages = [
	{ include = "sorrydb"},
]


[tool.poetry.scripts]
init_db = "sorrydb.cli.init_db:main"
update_db = "sorrydb.cli.update_db:main"
run_rfl_client = "sorrydb.cli.run_rfl_client:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
# do not retain tmp_paths because tests create large `.lake` folders which we want to remove after every test
tmp_path_retention_policy = "none"
