[project]
name = "sorrydb"
version = "0.1.0"
description = "Build a continously updating database of sorry statments in public Lean4 repositories"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "Apache License" }
readme = "README.md"
requires-python = ">=3.12,<4.0"


[tool.poetry.dependencies]
gitpython = "*"
typer = "*"
pydantic-settings = "*"
requests = "^2.32.3"
langchain = "^0.3.20"
langchain-anthropic = "^0.3.10"
dotenv = "^0.9.9"
langchain-openai = "^0.3.8"
langchain-google-genai = "^2.1.0"
lean-interact = "0.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.2.0"
ruff = "^0.11.1"

[tool.poetry]
packages = [
	{ include = "sorrydb"},
]


[tool.poetry.scripts]
sorrydb = "sorrydb.cli.sorrydb_cli:app"
run_rfl_agent = "sorrydb.cli.run_rfl_agent:main"
run_llm_agent = "sorrydb.cli.run_llm_agent:main"
run_tactic_agent = "sorrydb.cli.run_tactic_agent:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
# do not retain tmp_paths because tests create large `.lake` folders which we want to remove after every test
tmp_path_retention_policy = "none"
