[project]
name = "sorrydb"
version = "0.1.1"
description = "Build a continously updating database of sorry statements in public Lean4 repositories"
authors = [
	{ name = "Lenny Taelman", email = "l.d.j.taelman@uva.nl" },
	{ name = "Austin Letson", email = "waustinletson@gmail.com" },
	{ name = "Oliver Dressler", email = "odressler@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<3.14"


[tool.poetry.dependencies]
gitpython = "^3.1.44"
typer = "^0.15.3"
pydantic-settings = "^2.9.1"
requests = "^2.32.3"
langchain = "^1.1.3"
langchain-anthropic = "^1.2.0"
dotenv = "^0.9.9"
langchain-openai = "^1.1.1"
langchain-google-genai = "^4.0.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
lean-interact = "0.10.5"
transformers = "^4.52.4"
modal = "^1.0.4"
sqlmodel = "^0.0.24"
psycopg2-binary = "^2.9.10"
matplotlib = "^3.10.6"
langgraph = "^1.0.4"
langchain-core = "^1.1.3"
tavily-python = "^0.7.12"
langchain-community = "^0.4.1"
morphcloud = "^0.1.100"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
bcrypt = "^4.0.0"
python-multipart = "^0.0.20"
sqladmin = "^0.19.0"
itsdangerous = "^2.2.0"
langchain-huggingface = "^1.1.0"
google-auth = "^2.36.0"
aristotlelib = { path = "aristotlelib-0.7.0-py3-none-any.whl" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.2.0"
ruff = "^0.11.1"
ipykernel = "^6.30.1"

[tool.poetry.group.orchestration.dependencies]
prefect = {version = "^3.4.1", extras = ["docker"]}

[tool.poetry]
packages = [{ include = "sorrydb" }]


[tool.poetry.scripts]
sorrydb = "sorrydb.cli.sorrydb_cli:app"
run_rfl_agent = "sorrydb.cli.run_rfl_agent:main"
run_llm_agent = "sorrydb.cli.run_llm_agent:main"
run_tactic_agent = "sorrydb.cli.run_tactic_agent:main"
deploy_sorrydb = "orchestration.deploy:app"
analyze-reservoir-history = "sorrydb.cli.analyze_reservoir_history:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# do not retain tmp_paths because tests create large `.lake` folders which we want to remove after every test
tmp_path_retention_policy = "none"
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
]
markers = [
    "local_only: marks tests to run only locally, not in CI (deselect with '-m \"not local_only\"')",
]
